Fix font sizes for main section on mobile

--- a/app/styles/mobile.scss
+++ b/app/styles/mobile.scss
@@ -797,7 +797,7 @@ $icon-font-path: '../fonts/';
     text-align: center;
 
     h1 {
-      font-size: 20px;
+      font-size: 18px;
       font-weight: 100;
       font-family: "roboto-light", san-serif;
       margin: 0 1em;
@@ -815,11 +815,13 @@ $icon-font-path: '../fonts/';
   #btn-find-story {
     margin: 1em;
     width: 190px;
+    font-size: 18px;
   }
 
   #btn-telling-it {
     margin: 1em;
     width: 190px;
+    font-size: 18px;
   }
 
   #campfire-aside {
@@ -1127,7 +1129,7 @@ $icon-font-path: '../fonts/';
   #subsection-content {
     display: none;
     padding: 0em 0em 4em;
-    
+
     .subsection-banner {
       height: 20vh;
       min-height: 100px;
@@ -1154,7 +1156,7 @@ $icon-font-path: '../fonts/';
   #subsection-broadcast {
     display: none;
     padding: 4em 0em;
-    
+
     #broadcast-image {
       width: 450px;
     }
@@ -1205,7 +1207,7 @@ $icon-font-path: '../fonts/';
   #subsection-workshop-detail {
     display: none;
     padding: 0em 0em 4em;
-    
+
 
     #workshop-image {
       width: 450px;
